syntax = "proto3";

package com.moondahoon;
//option java_multiple_files = true;

service VehicleLocationService {
  rpc Put (PutRequest) returns (PutResponse) {}
  rpc Get (GetRequest) returns (stream GetResponse) {}
  rpc Search (SearchRequest) returns (stream SearchResponse) {}
  rpc History (HistoryRequest) returns (HistoryResponse) {}
}

message PutRequest {
  string id = 1;
  double latitude = 2;
  double longitude = 3;
}

message PutResponse {
  bool success = 1;
  string id = 2;
  string message = 3;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  string id = 1;
  double latitude = 2;
  double longitude = 3;
  string timestamp = 4;
}

message SearchRequest {
  double latitude = 1;
  double longitude = 2;
  double radius = 3;
}

message SearchResponse {
  repeated VehicleInfo vehicles = 1;

  message VehicleInfo {
    string id = 1;
    double latitude = 2;
    double longitude = 3;
    double distance = 4;
    string timestamp = 5;
  }
}


message HistoryRequest {
  string id = 1;
  string startTime = 2;
  string endTime = 3;
}

message HistoryResponse {
  repeated VehicleHistory history = 1;

  message VehicleHistory {
    string id = 1;
    double latitude = 2;
    double longitude = 3;
    string timestamp = 4;
  }
}